# warp-server-boilerplate

./: .env  Cargo.toml  Dockerfile  spec.yaml
configuration/: base.yaml
migrations/: 20210224155033_blank_table.sql
scripts/: init_db.sh
src/: configuration.rs  errors.rs  filters.rs  handlers.rs  lib.rs  main.rs  routes.rs  telemetry.rs
src/domain/: login_throttling.rs  mod.rs  session.rs  user.rs  user_email.rs  user_name.rs  user_password.rs
src/handlers/: health_check.rs
src/routes/: api.rs  health_check.rs  login.rs  logout.rs  mod.rs  register.rs  update_session.rs
src/routes/auth/: login.rs  logout.rs  mod.rs  register.rs
tests/: health_check.rs
