[package]
name = "warp-server-boilerplate"
version = "0.1.0"
authors = ["leonidgrr <leonidgrr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "warp-server-boilerplate"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
serde-aux = "1.0.1"
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
sqlx = { version = "0.5.1", default-features = false, features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.17.0", features = ["tokio-comp"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
tracing-bunyan-formatter = "0.1.6"
unicode-segmentation = "1.7.1"
validator = "0.12.0"
rust-argon2 = "0.8"
rand = { version = "0.8", features=["std_rng"] }
lazy_static = "1.4.0"

[dev-dependencies]
claim = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }